<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/xtv1"
        android:layout_width="match_parent"
        android:fontFamily="sans-serif-black"
        android:layout_height="90px"
        android:text="@string/instruccion"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        tools:ignore="MissingConstraints" />
    
    <EditText
        android:id="@+id/etNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_numeros"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/xtv1"
        tools:ignore="MissingConstraints"
        android:gravity="center_horizontal" />

    <GridLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alignmentMode="alignBounds"
        android:columnCount="3"
        android:rowCount="4"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/etNumero"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/btn7"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:lineSpacingExtra="8sp"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/_7"
            tools:ignore="MissingConstraints"/>

        <Button
            android:id="@+id/btn8"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:lineSpacingExtra="8sp"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/_8"
            tools:ignore="MissingConstraints"/>

        <Button
            android:id="@+id/btn9"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:lineSpacingExtra="8sp"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/_9"
            tools:ignore="MissingConstraints"/>

        <Button
            android:id="@+id/btn4"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:lineSpacingExtra="8sp"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/_4"
            tools:ignore="MissingConstraints"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:lineSpacingExtra="8sp"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/_5"
            tools:ignore="MissingConstraints"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:lineSpacingExtra="8sp"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/_6"
            tools:ignore="MissingConstraints"/>

        <Button
            android:id="@+id/btn1"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:lineSpacingExtra="8sp"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/_1"
            tools:ignore="MissingConstraints"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:lineSpacingExtra="8sp"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/_2"
            tools:ignore="MissingConstraints"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:lineSpacingExtra="8sp"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/_3"
            tools:ignore="MissingConstraints"/>

        <Button
            android:id="@+id/btn0"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:lineSpacingExtra="8sp"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/_0"
            tools:ignore="MissingConstraints"/>

        <Button
            android:id="@+id/btnIgual"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:lineSpacingExtra="8sp"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/_igual"
            tools:ignore="MissingConstraints"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>